--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2021-02-09 15:31:52
+ * @LastEditTime: 2021-02-09 17:37:45
+ * @LastEditors: your name
+ * @Description: In User Settings Edit
+ * @FilePath: \OJumpyo.github.io\_includes\head.html
+-->
 <head>
   <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
@@ -8,7 +16,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.scss" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
   <link rel="shortcut icon" href="{{ site.favicon }}">
  <!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css"> -->
