--- a/_includes/gitalk.html
+++ b/_includes/gitalk.html
@@ -2,15 +2,15 @@
 <div class="comments">
     <div id="gitalk-container"></div>
     <script>
-        const gitalk = new Gitalk({
+        var gitalk = new Gitalk({
           clientID: "{{ site.gitalk.clientID }}",
           clientSecret: "{{ site.gitalk.clientSecret }}",
           repo: "{{ site.gitalk.repo }}",
           owner: "{{ site.gitalk.owner }}",
-          // proxy: "{{ theme.gitalk.proxy }}",
+          proxy: "{{ theme.gitalk.proxy }}",
           admin: ["{{ site.gitalk.owner }}"],
           id: window.location.pathname,      // Ensure uniqueness and length less than 50
-          distractionFreeMode: true,  // Facebook-like distraction free mode
+          distractionFreeMode: false,  // Facebook-like distraction free mode
           title: "{{ page.title }}",
           language: "zh-CN",
 
